[package]
name = "sp_scripting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = { version = "0.9.2", features = ["luau-jit", "macros", "serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.23.2", features = ["tokio-comp", "json"] }
redis-macros = "0.2.1"
